FIX: bottom leaflet controls not visible

--- a/spa/src/styles.css
+++ b/spa/src/styles.css
@@ -43,6 +43,10 @@ html {
   top: 70px;
 }
 
+.leaflet-bottom {
+  position: fixed;
+}
+
 .climb-area-highlight{
   color: #3490dc;
 }
